<resources>

    <string name="app_name">天气伞</string>
    
    <string name="test_city">北京</string>
    
    <string name="today">今天</string>
    <string name="pm">PM2.5</string>
    <string name="default_text">_ _</string>
    <string name="forecast">预报</string>
    <string name="information">详细信息</string>
    <string name="felt_air_temp">体感温度</string>
    <string name="humidity">湿度</string>
    <string name="wind">风向风力</string>
    <string name="uv_index">紫外线指数</string>
    <string name="dressing_index">穿衣指数</string>
    <string name="title_city">城市选择</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->

    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="filler_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin mauris varius lacus porttitor eget blandit massa facilisis. Nulla pellentesque odio sed purus fermentum vitae viverra orci faucibus. Sed ullamcorper condimentum vulputate. Curabitur sit amet convallis velit. Vestibulum posuere eleifend risus ac adipiscing. Nam pulvinar nulla a velit faucibus imperdiet. Praesent eget nisi ac justo blandit sagittis. Maecenas at leo nisi, nec varius nisl.\nIn hac habitasse platea dictumst. Morbi neque tortor, vestibulum sed viverra a, luctus vel lorem. Nunc turpis eros, varius eget commodo et, euismod at eros. Sed tincidunt mi purus, vel posuere dui. Vestibulum ante lectus, porta sed mattis bibendum, scelerisque cursus sapien. Cras ultrices imperdiet fermentum. Aenean nisi nulla, euismod non blandit ac, dictum quis libero. Morbi consectetur tempor mollis. Suspendisse eget nunc arcu, vel ullamcorper augue. Integer malesuada, diam nec faucibus mollis, nisl velit euismod enim, ac mattis justo neque sit amet mauris. Vivamus pretium imperdiet pharetra.\nInteger sagittis augue sit amet lectus pulvinar sit amet commodo tortor mattis. Maecenas quis tellus eget ante eleifend sollicitudin non et nibh. Maecenas luctus euismod tristique. Fusce in odio nec diam blandit facilisis. Sed nec arcu eros. Vivamus quis tortor a metus tempus aliquam eget volutpat magna. Pellentesque id ultrices dolor. Sed blandit aliquet quam. Phasellus dapibus euismod vulputate. Aenean blandit, elit vitae vestibulum tincidunt, metus dui accumsan nulla, sit amet vehicula mauris lacus in est. Etiam dignissim pellentesque nulla vel malesuada. Cras vel lorem justo.\nSed condimentum nisl sit amet libero vestibulum hendrerit. Duis auctor tempus placerat. Proin velit ante, ornare nec dictum nec, hendrerit eu arcu. Etiam ut diam ornare quam venenatis pulvinar vitae vel leo. Vivamus consectetur, ante id interdum rhoncus, magna eros pulvinar lacus, a gravida nibh arcu vitae eros. Nulla scelerisque laoreet feugiat. Mauris sit amet gravida felis.\nNulla ac dolor sapien, vestibulum venenatis justo. Cras placerat velit vitae nibh pellentesque ultricies. Suspendisse adipiscing enim eu justo iaculis eu pretium urna fermentum. Duis porttitor nunc non nunc mattis vestibulum. Etiam elit tellus, feugiat in bibendum eget, adipiscing nec metus. Ut ut sem lacus, quis faucibus diam. Curabitur a nulla fermentum tortor dignissim posuere. Fusce faucibus ante ut sem imperdiet imperdiet eget vitae lorem. Etiam fringilla ornare ipsum, in sagittis quam ornare vitae. Nullam venenatis orci sit amet sapien adipiscing gravida. Proin turpis lectus, hendrerit vitae vehicula ut, auctor ac lectus. Pellentesque sollicitudin blandit ligula quis commodo. Mauris vulputate lectus in velit luctus aliquam. Quisque eget tincidunt elit. Quisque et augue quam, sed scelerisque eros.</string>
    
    <string name="gps">♦定位</string>
    <string name="beijing">北京市</string>
    <string name="tianjin">天津市</string>
    <string name="shangahi">上海市</string>
    <string name="chongqing">重庆市</string>
    <string name="shenyang">沈阳市</string>
    <string name="dalian">大连市</string>
    <string name="changchun">长春市</string>
    <string name="haerbin">哈尔滨市</string>
    <string name="zhengzhou">郑州市</string>
    <string name="wuhan">武汉市</string>
    <string name="changsha">长沙市</string>
    <string name="guangzhou">广州市</string>
    <string name="shenzhen">深圳市</string>
    <string name="nanjing">南京市</string>
    
    <string name="gugongbowuyuan">故宫博物院</string>
    <string name="dongfangmingzhuta">东方明珠塔</string>
    <string name="huangguoshupubu">黄果树瀑布</string>
    <string name="huangshanfengjingqu">黄山风景区</string>
    <string name="lushanfengjingqu">庐山风景区</string>
    <string name="qingmingshanghetu">清明上河图</string>
    <string name="budalagong">布达拉宫</string>
    <string name="qinshihuangling">秦始皇陵</string>
    <string name="yungangshiku">云冈石窟</string>
    <string name="jingpohu">镜泊湖</string>
    <string name="taohuayuan">桃花源</string>
    <string name="huanghelou">黄鹤楼</string>
    <string name="lijianggucheng">丽江古城</string>
    <string name="leshandafo">乐山大佛</string>
    <string name="nanjingfuzimiao">南京夫子庙</string>
    
    <string name="popcity">热门城市</string>
    <string name="popspot">热门景区</string>

</resources>
