<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popspot"
        android:textSize="12sp"
        android:textColor="#381801"
        android:layout_gravity="center_horizontal"/>
    
        <LinearLayout 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
        	android:layout_marginLeft="10dp"
        	android:orientation="horizontal" >
            
            <Button
                android:id="@+id/gugongbowuyuan"
                style="@style/ButtonTextViewStyle2"
                android:background="@drawable/button_shape"
                android:text="@string/gugongbowuyuan" />
            
            <Button 
                android:id="@+id/dongfangmingzhuta"
                android:text="@string/dongfangmingzhuta"
                android:background="@drawable/button_shape"
                style="@style/ButtonTextViewStyle2"/>
            
            <Button 
                android:id="@+id/huangguoshupubu"
                android:text="@string/huangguoshupubu"
                android:background="@drawable/button_shape"
                style="@style/ButtonTextViewStyle2"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
        	android:layout_marginLeft="10dp"
        	android:orientation="horizontal" >
            
            <Button
                android:id="@+id/huangshanfengjingqu"
                style="@style/ButtonTextViewStyle2"
                android:background="@drawable/button_shape"
                android:text="@string/huangshanfengjingqu" />
            
            <Button 
                android:id="@+id/lushanfengjingqu"
                android:text="@string/lushanfengjingqu"
                android:background="@drawable/button_shape"
                style="@style/ButtonTextViewStyle2"/>
            
            <Button 
                android:id="@+id/qingmingshanghetu"
                android:text="@string/qingmingshanghetu"
                android:background="@drawable/button_shape"
                style="@style/ButtonTextViewStyle2"/>
        </LinearLayout>
        
        <LinearLayout 
           android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
        	android:layout_marginLeft="10dp"
        	android:orientation="horizontal" >
            
            <Button
                android:id="@+id/budalagong"
                style="@style/ButtonTextViewStyle2"
                android:background="@drawable/button_shape"
                android:text="@string/budalagong" />
            
            <Button 
                android:id="@+id/qinshihuangling"
                android:text="@string/qinshihuangling"
                android:background="@drawable/button_shape"
                style="@style/ButtonTextViewStyle2"/>
            
            <Button 
                android:id="@+id/yungangshiku"
                android:text="@string/yungangshiku"
                android:background="@drawable/button_shape"
                style="@style/ButtonTextViewStyle2"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
        	android:layout_marginLeft="10dp"
        	android:orientation="horizontal" >
            
            <Button
                android:id="@+id/jingpohu"
                style="@style/ButtonTextViewStyle2"
                android:background="@drawable/button_shape"
                android:text="@string/jingpohu" />
            
            <Button 
                android:id="@+id/taohuayuan"
                android:text="@string/taohuayuan"
                android:background="@drawable/button_shape"
                style="@style/ButtonTextViewStyle2"/>
            
            <Button 
                android:id="@+id/huanghelou"
                android:text="@string/huanghelou"
                android:background="@drawable/button_shape"
                style="@style/ButtonTextViewStyle2"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
        	android:layout_marginLeft="10dp"
        	android:orientation="horizontal" >
            
            <Button
                android:id="@+id/lijianggucheng"
                style="@style/ButtonTextViewStyle2"
                android:background="@drawable/button_shape"
                android:text="@string/lijianggucheng" />
            
            <Button 
                android:id="@+id/leshandafo"
                android:text="@string/leshandafo"
                android:background="@drawable/button_shape"
                style="@style/ButtonTextViewStyle2"/>
            
            <Button 
                android:id="@+id/nanjingfuzimiao"
                android:text="@string/nanjingfuzimiao"
                android:background="@drawable/button_shape"
                style="@style/ButtonTextViewStyle2"/>
        </LinearLayout>
        

</LinearLayout>
